# urdf_to_opw_kinematics

./: CMakeLists.txt  DOC.md  README.md  package.xml  setup.py
launch/: custom_robot.launch  irb2400.launch  kr6r700sixx.launch  robot1.launch
scripts/: example.py  get_yaml_from_urdf.py
src/urdf_to_opw_kinematics/: main.py  util.py
test/: run_test_on_robot_description.py  run_tests_without_rostest.py  test_irb2400.launch  test_kr6r700.launch  test_robot1.launch  tests.py
urdf/: create_robot.xacro  create_robot_macro.xacro  irb2400.urdf  kr6r700sixx.urdf  robot1.urdf
